--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,12 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.16",
-    "com.unity.ide.rider": "3.0.14",
-    "com.unity.ide.visualstudio": "2.0.15",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.test-framework": "1.1.16",
+    "com.unity.textmeshpro": "2.1.1",
+    "com.unity.timeline": "1.2.16",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -39,6 +37,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.nuget.newtonsoft-json": "2.0.0"
   }
 }
