rename to web3auth build (#1)
* rename to web3auth build

* Added sample code for using custom verifiers.

Co-authored-by: hugtor <hugh@tor.us>

Hugh: Yes tested to work with Windows, Android, iOS

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 /UIElementsSchema
+ios-build/*
+web3auth-android-build_*/
+TestBuild_BackUpThisFolder_ButDontShipItWithYourGame/*
